working on isAdmin values

--- a/app/views/advisors.html
+++ b/app/views/advisors.html
@@ -19,7 +19,7 @@
                         <div class="col-xs-4 col-sm-3">
                             <h2>
                                 <strong style="color: white;">{{users.total_count}}</strong><br>
-                                <small><i class="fa fa-graduation-cap"></i> Mentors</small>
+                                <small><i class="fa fa-graduation-cap"></i> Advisors</small>
                             </h2>
                         </div>
                         
