--- a/app/views/user_profile.html
+++ b/app/views/user_profile.html
@@ -34,37 +34,32 @@
 				
 				                    <panel panel-class="panel-primary" data-heading="Editable Rows">
 				                       
-				                          <table class="table table-bordered table-condensed">
+				                          <table class="table table-condensed" style="border-bottom: 1px solid #e9ecf0;">
 	
 				                            <tr ng-repeat="(cluster, roles) in global.user.value.cities[global.citystate].clusters">
-				                              <td style="padding-top: 10px; padding-left: 15px; border: none;">				                                
+				                              <td style="border: none;">				                                
 				                                <span editable-text="cluster.name" e-name="name" e-form="rowform" e-required>
 				                                  <h2>{{ cluster || 'empty' }} Cluster</h2>
 				                                </span>
 				                              </td>
-				                              <td style="padding-top: 15px; text-align: center; border: none;">				                                
-				                                <div class="col-md-3" ng-class="{ 'switch-on' : isAdmin }" id="AdminToggle">				        
+				                              <td style="padding-bottom: 10px; text-align: center; border: none;">				                                
+				                                <div class="col-md-3">				        
 							                        <label class="control-label" style="display: block; margin-bottom: -5px;"><h3>Admin</h3></label>
-							                        <toggle-switch data-model="adminStatus" ng-class="AdminToggle" style="margin-bottom: 5px;" class="danger" on-label="Yes" off-label="No"><toggle-switch>
-							
+							                        <toggle-switch ng-init="adminStatus = isAdmin" ng-model="adminStatus" class="danger" on-label="Yes" off-label="No" disabled="{{isAdmin}}"><toggle-switch>						                        
 							                    </div>
 							                    <div class="col-md-3">
 							                        <label class="control-label" style="display: block; margin-bottom: -5px;"><h3>Leader</h3></label>
-							                        <toggle-switch data-model="leaderStatus" ng-class="{ 'disabled' : isAdmin, 'switch-on' : isLeader };" style="margin-bottom: 5px;" class="danger" on-label="Yes" off-label="No"><toggle-switch>
-							
+							                        <toggle-switch ng-init="leaderStatus = isLeader" ng-model="leaderStatus" class="danger" on-label="Yes" off-label="No" disabled="{{!isAdmin}}"><toggle-switch>							
 							                    </div>
 							                    <div class="col-md-3">
 							                        <label class="control-label" style="display: block; margin-bottom: -5px;"><h3>Advisor</h3></label>
-							                        <toggle-switch data-model="advisorStatus" ng-class="{ 'disabled' : !isLeader, 'switch-on' : isAdvisor };" style="margin-bottom: 5px;" class="info" on-label="Yes" off-label="No"><toggle-switch>
-							
+							                        <toggle-switch ng-init="advisorStatus = isAdvisor" ng-model="advisorStatus" class="info" on-label="Yes" off-label="No" disabled="{{!isLeader}}"><toggle-switch>							
 							                    </div>
 							                    <div class="col-md-3">
 							                        <label class="control-label" style="display: block; margin-bottom: -5px;"><h3>Member</h3></label>
-							                        <toggle-switch data-model="memberStatus" ng-class="{ 'switch-on' : isMember };" style="margin-bottom: 5px;" class="success" on-label="Yes" off-label="No"><toggle-switch>
-							
+							                        <toggle-switch ng-init="memberStatus = isMember" ng-model="memberStatus" class="success" on-label="Yes" off-label="No"><toggle-switch>							
 							                    </div>
-				                              </td>
-				                             
+				                              </td>	                             
 				                              
 				                            </tr>
 				                          </table>
