--- a/app/views/user_profile.html
+++ b/app/views/user_profile.html
@@ -36,28 +36,24 @@
 				                       
 				                          <table class="table table-condensed" style="border-bottom: 1px solid #e9ecf0;">
 	
-				                            <tr ng-repeat="(cluster, roles) in global.user.value.cities[global.citystate].clusters" style="border-bottom: 1px solid #e9ecf0;">
+				                            <tr ng-repeat="(cluster, roles) in global.profile.value.cities[global.citystate].clusters" style="border-bottom: 1px solid #e9ecf0;">
 				                              <td style="border: none;">				                                
 				                                <span editable-text="cluster.name" e-name="name" e-form="rowform" e-required>
 				                                  <h2>{{ cluster || 'empty' }} Cluster</h2>
 				                                </span>
 				                              </td>
-				                              <td style="text-align: center; border: none; padding: 10px 0 15px 0;">				                                
-				                                <div class="col-md-3">				        
-							                        <label class="control-label" style="display: block; margin-bottom: -5px;"><h3>Admin</h3></label>
-							                        <toggle-switch ng-init="adminStatus = (roles.roles.indexOf('Admin') >= 0)" ng-model="adminStatus" class="danger" on-label="Yes" off-label="No" ng-disabled="roles.roles.indexOf('Admin') >= 0"><toggle-switch>						                        
-							                    </div>
-							                    <div class="col-md-3">
+				                              <td style="text-align: center; border: none; padding: 10px 0 15px 0;">				                                				                                
+							                    <div class="col-md-4">
 							                        <label class="control-label" style="display: block; margin-bottom: -5px;"><h3>Leader</h3></label>
-							                        <toggle-switch ng-init="leaderStatus = (roles.roles.indexOf('Leader') >= 0)" ng-model="leaderStatus" class="danger" on-label="Yes" off-label="No" ng-disabled="roles.roles.indexOf('Leader') >= 0"><toggle-switch>							
+							                        <toggle-switch ng-init="leaderStatus = (roles.roles.indexOf('Leader') >= 0)" ng-model="leaderStatus" ng-click="setRole(cluster, 'Leader', leaderStatus)" class="danger" on-label="Yes" off-label="No" ng-disabled="roles.roles.indexOf('Leader') < 0"><toggle-switch>							
 							                    </div>
-							                    <div class="col-md-3">
+							                    <div class="col-md-4">
 							                        <label class="control-label" style="display: block; margin-bottom: -5px;"><h3>Advisor</h3></label>
-							                        <toggle-switch ng-init="advisorStatus = (roles.roles.indexOf('Advisor') >= 0)" ng-model="advisorStatus" class="info" on-label="Yes" off-label="No" ng-disabled="roles.roles.indexOf('Leader') >= 0"><toggle-switch>							
+							                        <toggle-switch ng-init="advisorStatus = (roles.roles.indexOf('Advisor') >= 0)" ng-model="advisorStatus" ng-click="setRole(cluster, 'Advisor', advisorStatus)" class="info" on-label="Yes" off-label="No" ng-disabled="roles.roles.indexOf('Leader') < 0"><toggle-switch>							
 							                    </div>
-							                    <div class="col-md-3">
+							                    <div class="col-md-4">
 							                        <label class="control-label" style="display: block; margin-bottom: -5px;"><h3>Member</h3></label>
-							                        <toggle-switch ng-init="memberStatus = (roles.roles.indexOf('Member') >= 0)" ng-model="memberStatus" class="success" on-label="Yes" off-label="No"><toggle-switch>							
+							                        <toggle-switch ng-init="memberStatus = (roles.roles.indexOf('Member') >= 0)" ng-model="memberStatus" ng-click="setRole(cluster, 'Member', memberStatus)" class="success" on-label="Yes" off-label="No"><toggle-switch>							
 							                    </div>
 				                              </td>	                             				                              
 				                            </tr>
