--- a/app/views/user_profile.html
+++ b/app/views/user_profile.html
@@ -5,7 +5,7 @@
                 <div class="options">
 		            <div class="btn-toolbar pull-right">
 			            <div class="btn-group hidden-xs">
-	                        <a href="javascript:void(0)" data-toggle="dropdown" class="btn btn-alt btn-primary dropdown-toggle">Edit Profile <span class="caret"></span></a>
+	                        <a data-toggle="dropdown" class="btn btn-alt btn-primary dropdown-toggle">Edit Profile <span class="caret"></span></a>
 	                        <ul class="dropdown-menu dropdown-custom text-left">                            
 	                            <li>
 	                                <a ng-click="global.assignRoles = !global.assignRoles"><i class="fa fa-bookmark pull-right"></i>View Roles</a>
@@ -36,7 +36,7 @@
 	
 		
 		<div class="container-fluid">	
-			
+			<!--
 			<div class="row">
 				<div class="col-md-12">
 					<div class="panel panel-gray">
@@ -74,7 +74,7 @@
 				                </div>
 				            
 				            </div>
-														
+											-->			
 							<div class="row">
 							
 								<div class="col-md-6">									
