--- a/app/views/user_profile.html
+++ b/app/views/user_profile.html
@@ -3,78 +3,27 @@
 		<div class="content-header">
             <div class="header-section">
                 <div class="options">
-		            <div class="btn-toolbar pull-right">
-			            <div class="btn-group hidden-xs">
-	                        <a data-toggle="dropdown" class="btn btn-alt btn-primary dropdown-toggle">Edit Profile <span class="caret"></span></a>
-	                        <ul class="dropdown-menu dropdown-custom text-left">                            
-	                            <li>
-	                                <a ng-click="global.assignRoles = !global.assignRoles"><i class="fa fa-bookmark pull-right"></i>View Roles</a>
-	                            </li>
-	                            <li class="divider"></li>
-	                            <li>
-	                                <a ng-click="removeProfile(global.profile.path.key)"><i class="fa fa-times pull-right"></i>Delete Profile</a>
-	                            </li>
-	                        </ul>
-	                    </div><!--
-		                <div class="btn-group hidden-xs" data-dropdown>
-		                    <button class="btn btn-default dropdown-toggle" data-toggle='dropdown'><span class="hidden-sm"> Edit Profile </span><span class="caret"></span></button>
-		                    <ul class="dropdown-menu">
-		                        <li><a class="dropdown-toggle" ng-click="global.assignRoles = !global.assignRoles" data-toggle='dropdown'>View Roles</a></li>
-		                        <li><a class="dropdown-toggle" ng-click="removeProfile(global.profile.path.key)">Delete Profile</a></li>
-		                    </ul>
-		                </div>-->
-		                
-		            </div>
+		            <div class="btn-toolbar pull-right">		            	
+		            	<a ng-click="global.editProfile = !global.editProfile" class="btn btn-alt btn-primary">Edit Profile</a>	                        
+                    </div>	                   
 		        </div>
                 
-                <img ng-src="{{global.profile.value.avatar || global.profile.value.linkedin.pictureUrl || '/public/blank_avatar.png'}}" alt="{{global.profile.value.name}}" class="pull-left img-circle" style="margin-right: 15px;">
-                <h1>{{global.profile.value.name | words:0}} {{global.profile.value.name | words:1}} {{global.profile.value.name | words:2}}<br>
-                <small>{{global.profile.value.linkedin.headline}}</small></h1>               
+                <img ng-src="{{global.profile.value.avatar || global.profile.value.linkedin.pictureUrl || '/public/blank_avatar.png'}}" alt="{{::global.profile.value.name}}" class="pull-left img-circle" style="margin-right: 15px;">
+                <h1>{{::global.profile.value.name | words:0}} {{::global.profile.value.name | words:1}} {{::global.profile.value.name | words:2}}<br>
+                <small>{{::global.profile.value.linkedin.headline}}</small></h1>               
 		        
             </div>
         </div>
 	
 		
 		<div class="container-fluid">	
-			<!--
+			
 			<div class="row">
 				<div class="col-md-12">
 					<div class="panel panel-gray">
 						<div class="panel-body">
-							<div class="row" ng-show="global.assignRoles">
-				                <div class="col-md-12">
-				
-				                    <panel panel-class="panel-primary" data-heading="Editable Rows">
-				                       
-				                          <table class="table table-condensed" style="border-bottom: 1px solid #e9ecf0;">
-	
-				                            <tr ng-repeat="cluster in global.city.value.clusters" style="border-bottom: 1px solid #e9ecf0;">
-				                              <td style="border: none;">				                                
-				                                <span editable-text="cluster.name" e-name="name" e-form="rowform" e-required>
-				                                  <h2>{{ cluster || 'empty' }} Cluster</h2>
-				                                </span>
-				                              </td>
-				                              <td style="text-align: center; border: none; padding: 10px 0 15px 0;">
-							                    <div class="col-md-4">
-							                        <label class="control-label" style="display: block; margin-bottom: -5px;"><h3>Leader</h3></label>
-							                        <toggle-switch ng-init="leaderStatus = (global.profile.value.cities[global.city.path.key].clusters[cluster].roles.indexOf('Leader') >= 0)" ng-model="leaderStatus" ng-click="setRole(cluster, 'Leader', leaderStatus)" class="danger" on-label="Yes" off-label="No" ng-disabled="global.profile.value.cities[global.city.path.key].clusters[cluster].roles.indexOf('Leader') < 0"><toggle-switch>							
-							                    </div>
-							                    <div class="col-md-4">
-							                        <label class="control-label" style="display: block; margin-bottom: -5px;"><h3>Advisor</h3></label>
-							                        <toggle-switch ng-init="advisorStatus = (global.profile.value.cities[global.city.path.key].clusters[cluster].roles.indexOf('Advisor') >= 0)" ng-model="advisorStatus" ng-click="setRole(cluster, 'Advisor', advisorStatus)" class="info" on-label="Yes" off-label="No" ng-disabled="global.profile.value.cities[global.city.path.key].clusters[cluster].roles.indexOf('Leader') < 0"><toggle-switch>							
-							                    </div>
-							                    <div class="col-md-4">
-							                        <label class="control-label" style="display: block; margin-bottom: -5px;"><h3>Member</h3></label>
-							                        <toggle-switch ng-init="memberStatus = (global.profile.value.cities[global.city.path.key].clusters[cluster].roles.indexOf('Member') >= 0)" ng-model="memberStatus" ng-click="setRole(cluster, 'Member', memberStatus)" class="success" on-label="Yes" off-label="No"><toggle-switch>							
-							                    </div>
-				                              </td>	                             				                              
-				                            </tr>
-				                          </table>
-				                    </panel>
-				                </div>
-				            
-				            </div>
-											-->			
+						
+											
 							<div class="row">
 							
 								<div class="col-md-6">									
@@ -104,14 +53,54 @@
 												</tr>
 											</tbody>
 										</table>
+										<a  ng-show="global.editProfile && (global.user.value.cities[global.city.path.key].admin == true)" ng-click="removeProfile(global.profile.path.key)" class="btn btn-alt btn-danger"><i class="fa fa-times"></i> Delete {{::global.profile.value.name | words:0}} {{::global.profile.value.name | words:1}} {{::global.profile.value.name | words:2}}</a>                       
 									</div>
 								</div>
-								<div class="col-md-6">
+								<div class="col-md-6">									
+				                    <panel panel-class="panel-primary">
+				                    	<h3>Cluster Membership</h3>
+				                          <table class="table table-condensed" style="margin-bottom: -19px;">											
+											<tbody>
+					                            <tr ng-repeat="cluster in global.city.value.clusters" style="border-top: 1px solid #e9ecf0;">
+					                              <td style="border: none;">				                                
+					                                <span style="margin: 12px 0 12px 0;">
+					                                  <h4>{{ cluster || 'empty' }} Cluster</h4>
+					                                </span>
+					                              </td>
+					                              <td style="text-align: center;" ng-hide="global.editProfile">
+					                              	<ul>
+					                              		<li ng-repeat="role in global.profile.value.cities[global.city.path.key].clusters[cluster].roles" style="list-style: none; display: inline; padding-right: 20px;">
+					                              			<span ng-class="{'btn btn-xs btn-info' : role == 'Advisor', 'btn btn-xs btn-success' : role == 'Member', 'btn btn-xs btn-danger' : role == 'Leader'}" style="margin-top: 10px;">{{ role }}</span>
+					                              		</li>
+					                              	</ul>
+					                              </td>
+					                              <td style="text-align: center; border: none; padding: 15px 0 15px 0;" ng-show="global.editProfile">
+								                    <div class="col-md-4">
+								                        <label class="control-label" style="display: block; margin-bottom: -5px;"><h5>Leader</h5></label>
+								                        <toggle-switch ng-init="leaderStatus = (global.profile.value.cities[global.city.path.key].clusters[cluster].roles.indexOf('Leader') >= 0)" ng-model="leaderStatus" ng-click="setRole(cluster, 'Leader', leaderStatus)" class="small-toggle danger" on-label="Yes" off-label="No" ng-disabled="global.user.value.cities[global.city.path.key].clusters[cluster] == undefined || global.user.value.cities[global.city.path.key].clusters[cluster].roles.indexOf('Leader') < 0"><toggle-switch>							
+								                    </div>
+								                    <div class="col-md-4">
+								                        <label class="control-label" style="display: block; margin-bottom: -5px;"><h5>Advisor</h5></label>
+								                        <toggle-switch ng-init="advisorStatus = (global.profile.value.cities[global.city.path.key].clusters[cluster].roles.indexOf('Advisor') >= 0)" ng-model="advisorStatus" ng-click="setRole(cluster, 'Advisor', advisorStatus)" class="info" on-label="Yes" off-label="No" style="line-height: 15px; min-width: 80px;" ng-disabled="global.user.value.cities[global.city.path.key].clusters[cluster] == undefined || global.user.value.cities[global.city.path.key].clusters[cluster].roles.indexOf('Leader') < 0"><toggle-switch>							
+								                    </div>
+								                    <div class="col-md-4">
+								                        <label class="control-label" style="display: block; margin-bottom: -5px;"><h5>Member</h5></label>
+								                        <toggle-switch ng-init="memberStatus = (global.profile.value.cities[global.city.path.key].clusters[cluster].roles.indexOf('Member') >= 0)" ng-model="memberStatus" ng-click="setRole(cluster, 'Member', memberStatus)" class="success" on-label="Yes" off-label="No" style="line-height: 15px !important; min-width: 80px;" ng-disabled="(global.profile.path.key !== global.user.path.key) && ((global.user.value.cities[global.city.path.key].clusters[cluster] == undefined) || (global.user.value.cities[global.city.path.key].clusters[cluster].roles.indexOf('Leader') < 0))"><toggle-switch>							
+								                    </div>
+					                              </td>	                             				                              
+					                            </tr>
+				                            </tbody>
+				                          </table>
+				                    </panel>
+				                </div>
+								
+								
+							</div>
+							<hr>
+							<div class="col-md-12">
 									<h3>Summary</h3>
 									<p style="white-space:pre-wrap;">{{global.profile.value.linkedin.summary}}</p>
 								</div>
-							</div>
-							<hr>
 						</div>
 					</div>
 				</div>
