--- a/app/views/cluster.html
+++ b/app/views/cluster.html
@@ -18,8 +18,8 @@
                         <div class="col-xs-4 col-sm-3"></div>
                         <div class="col-xs-4 col-sm-3">
                             <h2>
-                                <strong style="color: white;">{{users.total_count}}</strong><br>
-                                <small><i class="fa fa-graduation-cap"></i> Advisors</small>
+                                <strong style="color: white;">{{global.search.total_count}}</strong><br>
+                                <small><i class="fa fa-graduation-cap"></i> Members</small>
                             </h2>
                         </div>
                         
@@ -35,13 +35,14 @@
     
     <div id="peoplelist">
         <div class="row" style="margin-left: 10px; margin-right: 10px;">            
-            <div class="col-sm-6 col-lg-4" ng-repeat="item in users.results" ng-include="'views/templates/people_renderer.html'">                  
+            <div ng-show="global.search.results === undefined || global.search.results.length == 0" style="text-align: center"><h2>No cluster members!</h2></div>
+            <div class="col-sm-6 col-lg-4" ng-repeat="item in global.search.results" ng-include="'views/templates/people_renderer.html'">                 
             </div>            
         </div>              
         <div class="row" style="margin-left: 1.5%; margin-right: 1.5%;"> 
             <ul class="pager">
-                <li ng-if="users.prev" class="previous"><a ng-click="getUsers(users.prev)"><i class="fa fa-arrow-left"></i> Prev</a></li>
-                <li ng-if="users.next" class="next"><a ng-click="getUsers(users.next)">Next <i class="fa fa-arrow-right"></i></a></li>
+                <li ng-if="global.search.prev" class="previous"><a ng-click="search(global.search.prev)"><i class="fa fa-arrow-left"></i> Prev</a></li>
+                <li ng-if="global.search.next" class="next"><a ng-click="search(global.search.next)">Next <i class="fa fa-arrow-right"></i></a></li>
             </ul>
         </div>
     </div>
