--- a/app/views/advisors.html
+++ b/app/views/advisors.html
@@ -32,10 +32,70 @@
         <img src="assets/img/headers/widget5_header.jpg" alt="header image" class="animation-pulseSlow">
     </div>
         <!-- END Dashboard Header -->
+    <div class="container-fluid">
+    <!-- Messages List Block -->
+        <div class="block">
+            <!-- Messages List Title -->
+            <div class="block-title">
+                <div class="block-options pull-right">
+                    <a href="javascript:void(0)" class="btn btn-alt btn-sm btn-default" data-toggle="tooltip" title="Settings"><i class="fa fa-cog"></i></a>
+                </div>
+                <h2><strong>Advisors </strong> in {{global.city.value.citystate.split(',')[0]}}</h2>
+            </div>
+            <!-- END Messages List Title -->
+    
+            <!-- Messages List Content -->
+            <div class="table-responsive">
+                <table class="table table-hover table-vcenter">
+                    <thead>
+                        <tr>
+                            <td class="text-right" colspan="3">
+                                <strong>1 - {{users.count}}</strong> of <strong>{{users.total_count}}&nbsp;&nbsp;</strong>
+                                <div class="btn-group btn-group-sm">
+                                    <span ng-if="users.prev"><a ng-click="getUsers(users.prev)" class="btn btn-sm btn-default"><i class="fa fa-angle-left"></i></a></span>
+                                    <span ng-if="users.next"><a ng-click="getUsers(users.next)" class="btn btn-sm btn-default"><i class="fa fa-angle-right"></i></a></span>
+                                </div>
+                            </td>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        <tr ng-repeat="item in users.results">           
+                            <td class="text-center" style="width: 5%;">
+                                <a ng-click="viewUser($index)" title="View {{::item.value.name | words:0}}'s Profile"><img style="height:32px" ng-src="{{::item.value.avatar || item.value.linkedin.pictureUrl || '/public/blank_avatar.png'}}" alt="{{::item.value.name}}" class="widget-image img-circle pull-left"></a>
+                            </td>                                                    
+                            <td style="width: 60%;">
+                                <a ng-click="viewUser($index)" title="View {{::item.value.name | words:0}}'s Profile"><strong>{{::item.value.name}}</strong></a>                                
+    					        <br>
+                                <span class="text-muted">{{::item.value.linkedin.headline}}</span>
+                            </td>
+                            <td style="width: 35%;">
+                                <li ng-repeat="(cluster, val) in item.value.cities[global.city.path.key].clusters" style="list-style: none; display: inline; float: right; padding-left: 5px;">
+    					           <span class="btn btn-xs btn-alt btn-default" ng-class="{ 'btn-info' : ((val.roles.indexOf('Advisor') >= 0) && (val.roles.indexOf('Leader') < 0)), 'btn-danger' : (val.roles.indexOf('Leader') >= 0) }" style="cursor: default;"><i class="fa {{global.city.value.clusters[cluster].icon}}"></i></span>
+    					        </li>
+					        </td>
+                        </tr>
+                        <tr>
+                            <td class="text-right" colspan="3">
+                                <strong>1 - {{users.count}}</strong> of <strong>{{users.total_count}}&nbsp;&nbsp;</strong>
+                                <div class="btn-group btn-group-sm">
+                                    <span ng-if="users.prev"><a ng-click="getUsers(users.prev)" class="btn btn-sm btn-default"><i class="fa fa-angle-left"></i></a></span>
+                                    <span ng-if="users.next"><a ng-click="getUsers(users.next)" class="btn btn-sm btn-default"><i class="fa fa-angle-right"></i></a></span>
+                                </div>
+                            </td>
+                        </tr>
+                    </tbody>
+                </table>
+            </div>
+            <!-- END Messages List Content -->
+        </div>
+        <!-- END Messages List Block -->
+    </div>
+</div>
+<!-- END Messages List -->
     
     <div id="peoplelist">
-        <div class="row" style="margin-left: 10px; margin-right: 10px;">            
-            <div class="col-sm-6 col-lg-4" ng-repeat="item in users.results" ng-include="'views/templates/people_renderer.html'">                  
+        <div class="row" style="margin-left: 10px; margin-right: 10px;">
+            <div class="col-sm-6 col-lg-4" >
             </div>            
         </div>              
         <div class="row" style="margin-left: 1.5%; margin-right: 1.5%;"> 
