--- a/app/views/advisors.html
+++ b/app/views/advisors.html
@@ -35,12 +35,40 @@
         
     <div class="col-md-4 col-lg-3">
         <!-- Navigation Block -->
-        <div class="block full">
+        <div class="block full filternav">
             <div class="block-title">
-                <div class="block-options pull-right">
-                    <a href="javascript:void(0)" class="btn btn-alt btn-sm btn-default" data-toggle="tooltip" title="Settings"><i class="fa fa-cog"></i></a>
-                </div>
-                <h2><i class="fa fa-compass"></i> Cluster <strong>Filters</strong></h2>
+                <h2>Role <strong>Filters</strong></h2>
+            </div>
+            <ul class="nav nav-pills nav-stacked nav-icons media-filter">
+                <li class="active">
+                    <a href="javascript:void(0)" data-category="all">
+                        <i class="fa fa-fw fa-folder-open themed-color-dark"></i> <strong>All</strong>
+                    </a>
+                </li>
+                <li>
+                    <a href="javascript:void(0)">
+                        <i class="fa fa-flag text-danger"></i> <strong>Leaders</strong> 
+                    </a>
+                </li>
+                <li>
+                    <a href="javascript:void(0)">
+                        <i class="fa fa-graduation-cap text-info"></i> <strong>Advisors</strong> 
+                    </a>
+                </li>
+                <li>
+                    <a href="javascript:void(0)">
+                        <i class="fa fa-leaf text-success"></i> <strong>Members</strong> 
+                    </a>
+                </li>
+            </ul>
+            <!-- END Filter by Type links -->
+        </div>
+        <!-- END Navigation Block -->  
+    
+        <!-- Navigation Block -->
+        <div class="block full filternav">
+            <div class="block-title">
+                <h2>Cluster <strong>Filters</strong></h2>
             </div>
             <ul class="nav nav-pills nav-stacked nav-icons media-filter">
                 <li class="active">
@@ -48,24 +76,9 @@
                         <i class="fa fa-fw fa-folder-open themed-color-dark icon-push"></i> <strong>All</strong>
                     </a>
                 </li>
-                <li>
-                    <a href="javascript:void(0)" data-category="movie">
-                        <i class="fa fa-fw fa-film text-danger icon-push"></i> <strong>Movies</strong>
-                    </a>
-                </li>
-                <li>
-                    <a href="javascript:void(0)" data-category="photo">
-                        <i class="fa fa-fw fa-picture-o text-success icon-push"></i> <strong>Photos</strong>
-                    </a>
-                </li>
-                <li>
-                    <a href="javascript:void(0)" data-category="music">
-                        <i class="fa fa-fw fa-music text-info icon-push"></i> <strong>Music</strong>
-                    </a>
-                </li>
-                <li>
-                    <a href="javascript:void(0)" data-category="book">
-                        <i class="fa fa-fw fa-book text-warning icon-push"></i> <strong>Books</strong>
+                <li ng-repeat="(cluster, val) in global.city.value.clusters">
+                    <a ng-model="cluster_selection" value="{{cluster}}">
+                        <i class="fa {{val.icon}}"></i> <strong>{{cluster}}</strong> 
                     </a>
                 </li>
             </ul>
@@ -77,39 +90,33 @@
     <!-- Messages List Block -->
         <div class="block">
             <!-- Messages List Title -->
-            <div class="block-title">
+            <div class="block-title" style="margin-bottom: 0;">
                 <div class="block-options pull-right">
-                    <a href="javascript:void(0)" class="btn btn-alt btn-sm btn-default" data-toggle="tooltip" title="Settings"><i class="fa fa-cog"></i></a>
+                        <strong>{{users.start}} - {{users.end}}</strong> of <strong>{{users.total_count}}&nbsp;&nbsp;</strong>
+                    <div class="btn-group btn-group-sm" style="margin-top: -5px;">
+                        <span ng-if="users.prev"><a ng-click="getUsers(users.prev)" class="btn btn-sm btn-default" style="background-color: #fff;"><i class="fa fa-angle-left"></i></a></span>
+                        <span ng-if="users.next"><a ng-click="getUsers(users.next)" class="btn btn-sm btn-default" style="background-color: #fff;"><i class="fa fa-angle-right"></i></a></span>
+                    </div>
                 </div>
-                <h2><strong>Advisors </strong> in {{global.city.value.citystate.split(',')[0]}}</h2>
+                <h2><strong>People </strong> in {{global.city.value.citystate.split(',')[0]}}</h2>
             </div>
             <!-- END Messages List Title -->
     
             <!-- Messages List Content -->
-            <div class="table-responsive">
-                <table class="table table-hover table-vcenter">
-                    <thead>
-                        <tr>
-                            <td class="text-right" colspan="3">
-                                <strong>{{users.start}} - {{users.end}}</strong> of <strong>{{users.total_count}}&nbsp;&nbsp;</strong>
-                                <div class="btn-group btn-group-sm">
-                                    <span ng-if="users.prev"><a ng-click="getUsers(users.prev)" class="btn btn-sm btn-default"><i class="fa fa-angle-left"></i></a></span>
-                                    <span ng-if="users.next"><a ng-click="getUsers(users.next)" class="btn btn-sm btn-default"><i class="fa fa-angle-right"></i></a></span>
-                                </div>
-                            </td>
-                        </tr>
-                    </thead>
+            <div class="table-responsive" style="margin: 0 -10px;">
+                <table class="table table-hover table-vcenter">                
                     <tbody>
-                        <tr ng-repeat="item in users.results | orderBy : item.value.clusters">           
+                        <tr><td style="border-bottom: 1px solid #fff; border-top: none; padding: 0;" colspan="3"></td></tr>
+                        <tr ng-repeat="item in users.results | filter:cluster_selection | orderBy : item.value.clusters">           
                             <td class="text-center" style="width: 5%;">
-                                <a ng-click="viewUser($index)" title="View {{::item.value.name | words:0}}'s Profile"><img style="height:32px" ng-src="{{::item.value.avatar || item.value.linkedin.pictureUrl || '/public/blank_avatar.png'}}" alt="{{::item.value.name}}" class="widget-image img-circle pull-left"></a>
+                                <a ng-click="viewUser($index)" title="View {{::item.value.name | words:0}}'s Profile"><img style="height:48px" ng-src="{{::item.value.avatar || item.value.linkedin.pictureUrl || '/public/blank_avatar.png'}}" alt="{{::item.value.name}}" class="widget-image img-circle pull-left"></a>
                             </td>                                                    
-                            <td style="width: 60%;">
+                            <td style="width: 65%;">
                                 <a ng-click="viewUser($index)" title="View {{::item.value.name | words:0}}'s Profile"><strong>{{::item.value.name}}</strong></a>                                
     					        <br>
                                 <span class="text-muted">{{::item.value.linkedin.headline}}</span>
                             </td>
-                            <td style="width: 35%;">
+                            <td style="width: 30%;">
                                 <li ng-repeat="(cluster, val) in item.value.cities[global.city.path.key].clusters" style="list-style: none; display: inline; float: right; padding-left: 5px;">
     					           <span title="{{cluster}} Cluster" class="btn btn-xs btn-alt btn-default" ng-class="{ 'btn-info' : ((val.roles.indexOf('Advisor') >= 0) && (val.roles.indexOf('Leader') < 0)), 'btn-danger' : (val.roles.indexOf('Leader') >= 0) }" style="cursor: default;"><i class="fa {{global.city.value.clusters[cluster].icon}}"></i></span>
     					        </li>
@@ -119,8 +126,8 @@
                             <td class="text-right" colspan="3">
                                 <strong>{{users.start}} - {{users.end}}</strong> of <strong>{{users.total_count}}&nbsp;&nbsp;</strong>
                                 <div class="btn-group btn-group-sm">
-                                    <span ng-if="users.prev"><a ng-click="getUsers(users.prev)" class="btn btn-sm btn-default"><i class="fa fa-angle-left"></i></a></span>
-                                    <span ng-if="users.next"><a ng-click="getUsers(users.next)" class="btn btn-sm btn-default"><i class="fa fa-angle-right"></i></a></span>
+                                    <span ng-if="users.prev"><a ng-click="getUsers(users.prev)" class="btn btn-sm btn-default" style="border-radius: 15px;"><i class="fa fa-angle-left"></i></a></span>
+                                    <span ng-if="users.next"><a ng-click="getUsers(users.next)" class="btn btn-sm btn-default" style="border-radius: 15px;"><i class="fa fa-angle-right"></i></a></span>
                                 </div>
                             </td>
                         </tr>
